k8s/09-moulineuse-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: moulineuse
  namespace: demo1
  labels:
    app: moulineuse
spec:
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  selector:
    app: moulineuse
  type: ClusterIP
